--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ migrate_working_dir/
 *.iws
 .idea/
 
+# files for development purposes
+.TODOS.txt
+
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
